# rust-training

./: .gitignore  README.md  rust_conspect.md
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
blog/: Cargo.toml
blog/src/: lib.rs  main.rs
blog_type/: Cargo.toml
blog_type/src/: lib.rs  main.rs
box_t/: Cargo.toml
box_t/src/: main.rs
branches/: Cargo.toml
branches/src/: main.rs
closure/: Cargo.toml
closure/src/: main.rs
coin_rust/: Cargo.toml
coin_rust/src/: main.rs
draw_gui_training/: Cargo.toml
draw_gui_training/src/: lib.rs
generic/: Cargo.toml
generic/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: main  main.rs
iter/: Cargo.toml
iter/src/: main.rs
loops/: Cargo.toml
loops/src/: main.rs
messages-actix/: Cargo.toml
messages-actix/src/: lib.rs  main.rs
messages_actix/: Cargo.toml
messages_actix/src/: lib.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
no_panic/: Cargo.toml
no_panic/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
panic/: Cargo.toml
panic/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
std_io_rust_training/: Cargo.toml
std_io_rust_training/src/: foo.txt  main.rs
thread/: Cargo.toml
thread/src/: main.rs
web_server/: Cargo.toml
web_server/src/: lib.rs  main.rs
